# horus-runtime-plugin

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
src/my_plugin/: i18n.py
src/my_plugin/locale/: messages.pot
src/my_plugin/task/: __init__.py  custom_task.py
tests/: conftest.py
tests/unit/: test_custom_task.py
